Ensure dropdown toggles show with border in high contrast mode
Update _dropdown.scss (#12365)

--- a/client/scss/components/_dropdown.scss
+++ b/client/scss/components/_dropdown.scss
@@ -1,5 +1,5 @@
 .w-dropdown__toggle {
-  @apply w-px-2 w-text-text-label w-bg-transparent;
+  @apply w-px-2 w-text-text-label w-bg-transparent w-border-2 w-border-transparent;
 }
 
 .w-dropdown__toggle--icon {
